--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body{
     height: 50vh;
     background-color: rgba(249, 240, 240, 0.208);
     border-radius: 30px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.3);
     padding: 20px;
     display: flex;
     flex-direction: column;
